--- a/Module 1 Week 3.ipynb
+++ b/Module 1 Week 3.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "Softmax"
+    ]
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -28,9 +32,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ward Name: Ward A\n",
+      "People in the ward:\n",
+      "Name: Alice, Year of Birth: 2000, Grade: 12A\n",
+      "Name: Bob, Year of Birth: 1980, Subject: Math\n",
+      "Name: Charlie, Year of Birth: 1975, Subject: Physics\n",
+      "Name: David, Year of Birth: 1970, Specialist: Cardiology\n",
+      "Name: Eve, Year of Birth: 1985, Specialist: Neurology\n",
+      "\n",
+      "Number of doctors: 2\n",
+      "After sorting by age:\n",
+      "Ward Name: Ward A\n",
+      "People in the ward:\n",
+      "Name: David, Year of Birth: 1970, Specialist: Cardiology\n",
+      "Name: Charlie, Year of Birth: 1975, Subject: Physics\n",
+      "Name: Bob, Year of Birth: 1980, Subject: Math\n",
+      "Name: Eve, Year of Birth: 1985, Specialist: Neurology\n",
+      "Name: Alice, Year of Birth: 2000, Grade: 12A\n",
+      "\n",
+      "Average birth year of teachers: 1977.50\n"
+     ]
+    }
+   ],
    "source": [
     "from typing import List\n",
     "\n",
@@ -92,7 +122,7 @@
     "            return 0\n",
     "        return sum(teacher.yob for teacher in teachers) / len(teachers)\n",
     "\n",
-    "# Tạo ward và thêm người\n",
+    "# Add ward and person\n",
     "ward = Ward(\"Ward A\")\n",
     "ward.add_person(Student(\"Alice\", 2000, \"12A\"))\n",
     "ward.add_person(Teacher(\"Bob\", 1980, \"Math\"))\n",
@@ -100,24 +130,24 @@
     "ward.add_person(Doctor(\"David\", 1970, \"Cardiology\"))\n",
     "ward.add_person(Doctor(\"Eve\", 1985, \"Neurology\"))\n",
     "\n",
-    "# In thông tin ward\n",
+    "# print ward info \n",
     "print(ward.describe())\n",
     "\n",
-    "# Đếm số lượng bác sĩ\n",
+    "# Count the numbers of doctor\n",
     "print(f\"Number of doctors: {ward.count_doctor()}\")\n",
     "\n",
-    "# Sắp xếp theo tuổi\n",
+    "# Sort in age\n",
     "ward.sort_age()\n",
     "print(\"After sorting by age:\")\n",
     "print(ward.describe())\n",
     "\n",
-    "# Tính trung bình năm sinh của giáo viên\n",
+    "# Average BY of teacher\n",
     "print(f\"Average birth year of teachers: {ward.compute_average():.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,8 +213,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
